--- a/app/src/main/res/layout/exc_summary.xml
+++ b/app/src/main/res/layout/exc_summary.xml
@@ -1,49 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="732dp"
-        android:layout_height="1515dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.26"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.498"
-        app:srcCompat="@drawable/factory_background" />
+    android:layout_height="match_parent"
+    android:background="@drawable/factory_background">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-black"
-        android:text="Farming Factory"
+        android:text="@string/farming_factory"
         android:textColor="#E1E1E1"
         android:textSize="48sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.032" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <View
         android:id="@+id/view2"
-        android:layout_width="443dp"
-        android:layout_height="954dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="#3E3434"
         android:backgroundTint="#E6AE8181"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.524"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.39" />
+        app:layout_constraintWidth_percent="0.9"
+        app:layout_constraintHeight_percent="0.9"
+        />
 
     <TextView
         android:id="@+id/text_congratulations"
@@ -51,14 +36,12 @@
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-black"
         android:text="Congratulations!!!"
-        android:textColor="#000000"
-        android:textSize="48sp"
-        app:layout_constraintBottom_toBottomOf="@+id/view2"
+        android:textColor="@color/black"
+        android:textSize="40sp"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="@+id/view2"
-        app:layout_constraintHorizontal_bias="0.464"
         app:layout_constraintStart_toStartOf="@+id/view2"
-        app:layout_constraintTop_toTopOf="@+id/view2"
-        app:layout_constraintVertical_bias="0.12" />
+        app:layout_constraintTop_toTopOf="@id/view2"/>
 
     <TextView
         android:id="@+id/textView9"
@@ -82,7 +65,7 @@
         android:fontFamily="sans-serif-black"
         android:text="1 x"
         android:textColor="#000000"
-        android:textSize="60sp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="@+id/view2"
         app:layout_constraintEnd_toEndOf="@+id/view2"
         app:layout_constraintHorizontal_bias="0.19"
@@ -92,14 +75,14 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="242dp"
-        android:layout_height="213dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         app:layout_constraintBottom_toBottomOf="@+id/view2"
         app:layout_constraintEnd_toEndOf="@+id/view2"
-        app:layout_constraintHorizontal_bias="0.619"
+        app:layout_constraintHorizontal_bias="0.582"
         app:layout_constraintStart_toEndOf="@+id/text_cheese_count"
         app:layout_constraintTop_toBottomOf="@+id/textView9"
-        app:layout_constraintVertical_bias="0.222"
+        app:layout_constraintVertical_bias="0.236"
         app:srcCompat="@drawable/cheese" />
 
     <TextView
@@ -119,12 +102,12 @@
 
     <Button
         android:id="@+id/btn_back_to_farm"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="#4A4542"
         android:fontFamily="sans-serif-black"
         android:text="Go back to my farm"
-        android:textSize="34sp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="@+id/view2"
         app:layout_constraintEnd_toEndOf="@+id/view2"
         app:layout_constraintStart_toStartOf="@+id/view2"
