--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,35 @@
     tools:context=".MainActivity"
     android:background="@drawable/farm">
 
+    <TextView
+        android:id="@+id/farm_house"
+        android:layout_width="150dp"
+        android:layout_height="180dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginStart="120dp">
+    </TextView>
+    <TextView
+        android:id="@+id/hen_house_1"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_marginTop="250dp"
+        android:layout_marginStart="35dp">
+    </TextView>
+    <TextView
+        android:id="@+id/hen_house_2"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_marginTop="340dp"
+        android:layout_marginStart="35dp">
+    </TextView>
+    <TextView
+        android:id="@+id/cows"
+        android:layout_width="130dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="290dp"
+        android:layout_marginStart="240dp">
+    </TextView>
+
     <Button
         android:id="@+id/speaking_button"
         app:backgroundTint="@null"
