--- a/app/src/main/res/layout/activity_speaking_congrats_screen.xml
+++ b/app/src/main/res/layout/activity_speaking_congrats_screen.xml
@@ -10,11 +10,16 @@
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="50dp"
-        android:background="#c09154"
-        android:padding="20dp">
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/campfire_ground"
+        android:padding="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.95"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent="0.9">
 
         <TextView
             android:id="@+id/textView1"
@@ -33,13 +38,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:textSize="20sp"
             android:text="You did great in this conversation!"
             app:layout_constraintTop_toBottomOf="@+id/textView1" />
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="200dp"
-            android:layout_height="300dp"
+            android:layout_width="300dp"
+            android:layout_height="500dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/black_border"
             android:padding="20dp"
@@ -53,6 +59,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/tony"
+                android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -61,11 +68,13 @@
                 android:textColor="@color/black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textSize="20sp"
                 android:text="@string/de_donde_eres"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView17" />
 
             <TextView
+                android:textSize="20sp"
                 android:id="@+id/textView19"
                 android:textColor="@color/black"
                 android:layout_width="wrap_content"
@@ -76,6 +85,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView18" />
 
             <TextView
+                android:textSize="20sp"
                 android:id="@+id/textView20"
                 android:textColor="@color/black"
                 android:layout_width="wrap_content"
@@ -88,10 +98,11 @@
 
         <Button
             android:id="@+id/confirm_button"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/grass"
             android:text="@string/got_it"
+            android:textSize="20sp"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
